<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:icon="@drawable/ic_camera"
        app:title="@string/camera">

        <ListPreference
            app:defaultValue="front"
            app:entries="@array/camera_lens"
            app:entryValues="@array/camera_lens_values"
            app:key="camera_lens"
            app:title="@string/camera_lens"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="68"
            app:entries="@array/landmark_mode"
            app:entryValues="@array/landmark_mode_values"
            app:key="landmark_mode"
            app:title="@string/landmark_mode"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_identity"
        app:title="@string/identity_capture_requirements">

        <EditTextPreference
            app:defaultValue="0.5"
            app:key="identity_hold_duration"
            app:title="@string/identity_hold_duration"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_threshold"
        app:title="@string/thresholds">

        <EditTextPreference
            app:defaultValue="0.5"
            app:key="liveness_threshold"
            app:title="@string/liveness_threshold"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="0.67"
            app:key="identify_threshold"
            app:title="@string/identify_threshold"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_reset"
        app:title="@string/reset">

        <Preference
            app:key="restore_default_settings"
            app:title="@string/restore_default_settings" />

        <Preference
            app:key="clear_all_person"
            app:title="@string/clear_all_person" />
    </PreferenceCategory>

</PreferenceScreen>
